--- a/components/navbarElements/MobileNav.scss
+++ b/components/navbarElements/MobileNav.scss
@@ -14,13 +14,14 @@
 
   &__list {
     position: absolute;
-    top: 16rem;
+    top: 10rem;
     right: 2rem;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
     padding: 3rem;
     min-width: 20rem;
+    max-width: 90%;
     max-height: 70vh;
 
     background-color: #fff;
